@@ -26,3 +26,4 @@ Fixes:
       This frixes a break in compositing on new intel mesa drivers.
     * Fixed glGetIntegerv() in Direct Rendering mode for Evas GL
       to properly handle GL_SCISSOR_BOX and GL_VIEWPORT parameters.
+    * Fixed textblock textprop leak.
